2006-12-03  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (theme_properties_free),
	(file_theme_type), (missing_utility_message_dialog),
	(extract_files_error_dialog), (transfer_done_targz_idle_cb),
	(transfer_done_tarbz2_idle_cb), (transfer_done_cb),
	(gnome_theme_install_from_uri), (gnome_theme_installer_run):

	- Cleanup some of the install code
	- Implement bug 325300 - Theme manager should be able to handle archives
	  with icon, gtk+ and metacity themes
	- Implement bug 326103 - Allow installing a theme from a directory

2006-11-27  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (file_theme_type): Applied patch from
	bug 378680 (leak in file_theme_type() in theme-switcher)

2006-11-13  Thomas Wood  <thos@gnome.org>

	(gnome_theme_installer_run): Open transfer dialog with transient
	parent set
	
	* gnome-theme-details.c: (remove_theme), (color_select),
	(toggle_color_scheme_key), (gnome_theme_details_init),
	(update_color_buttons_from_string),
	(gnome_theme_details_update_from_gconf):
	* gnome-theme-installer.c: (gnome_theme_install_from_uri),
	* gnome-theme-installer.h:
	* gnome-theme-manager.c: (free_all),
	(gnome_theme_manager_drag_data_received_cb), (main):
	* gnome-theme-manager.h:
	* gnome-theme-save.c: (save_dialog_response):
	* theme-properties.glade:

	- Add a colours tab to change gtk-color-scheme setting

2006-10-27  Thomas Wood  <thos@gnome.org>

	* gnome-theme-installer.c: (transfer_done_cb): Hopefully fix bug
	352490

2006-10-02  Thomas Wood  <thos@gnome.org>

	* gnome-theme-manager.c: (load_meta_themes), (main): Add an
	install-theme command line option. Fixes bug 354581 - Theme manager
	has no CLI tool to install themes.

2006-09-30  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (setup_tree_view):
	* theme-properties.glade:

	Allows the text in the details dialog lists to ellipsise, and sets a minimum width
	for the dialog. Fixes bug 355269 (Theme manager dialog width)
